# Nuizu

./: .gitignore  LICENSE-APACHE  README.md  pyproject.toml
.claude/skills/format-dst/: SKILL.md
.claude/skills/format-jef/: SKILL.md
.claude/skills/format-pes/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/thread-gauge/: SKILL.md
src/nuizu/: __init__.py  __main__.py  auto_angle.py  compensate.py  fill.py  optimize.py  palettes.py  pipeline.py  quantize.py  segment.py  svg_preview.py
src/nuizu/formats/: common.py  dst.py  jef.py  pes.py
src/nuizu/palettes/: __init__.py
src/nuizu/palettes/colors/: admelody.csv  anchor.csv  arc-polyester.csv  arc-rayon.csv  aurifil-lana.csv  aurifil-mako.csv  aurifil-polyester.csv  aurifil-rayon.csv  aurifil-royal.csv  bfc-polyester.csv  brildor.csv  brother-country.csv  brother.csv  brothread-40.csv  brothread-80.csv  coats-alcazar-jazz.csv  coats-alcazar.csv  coats-sylko-usa.csv  coats-sylko.csv  dmc.csv  embroidex.csv  emmel.csv  fil-tec-glide.csv  floriani-polyester.csv  fufu.csv  generic.csv  gunold-polyester.csv  gutermann-creativ-dekor.csv  hemingworth.csv  isacord-polyester.csv  isafil-rayon.csv  isalon-polyester.csv  janome.csv  king-star.csv  madeira.csv  magnifico.csv  marathon-polyester.csv  marathon-rayon-v3.csv  marathon-rayon.csv  metro.csv  (+21 more)
src/nuizu/palettes/sets/: brother-cts40.yaml  (+2 more)
src/photo2stitch/: __init__.py  __main__.py  auto_angle.py  compensate.py  fill.py  pipeline.py  preprocess.py  quantize.py  segment.py  svg_preview.py
src/photo2stitch/formats/: __init__.py  dst.py  pes.py
