[project]
name = "nuizu"
version = "0.1.0"
description = "Convert photos to embroidery data files (DST / PES / JEF)"
authors = [{ name = "mokuichi147" }]
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.12.10"
urls = { Homepage = "https://github.com/Mokuichi147/Nuizu", Repository = "https://github.com/Mokuichi147/Nuizu" }
dependencies = [
    "numpy",
    "opencv-python",
    "pillow",
    "scikit-learn",
    "typer",
]

[project.scripts]
nuizu = "nuizu.__main__:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
